# oxidizer-lite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: README.md  release.yml
examples/: README.md
examples/scd2/: README.md  controller.py  invoke.py  scd2.yml  worker.py
examples/scduck2/: README.md  api.py  controller.py  docker-compose.yml  invoke.py  scduck2.yml  worker.py
examples/skeleton/: README.md  api.py  controller.py  invoke.py  sample.yml  worker.py
oxidizer_lite/: __init__.py  anvil.py  catalyst.py  crucible.py  incubation.py  lattice.py  microscope.py  oxidizer.py  phase.py  reagent.py  residue.py  topology.py  ui.html
tests/integration/: __init__.py  conftest.py  test_chaos.py  test_config_errors.py  test_happy_path.py
tests/unit/: __init__.py  conftest.py  test_catalyst.py  test_crucible.py  test_oxidizer.py  test_phase.py  test_reagent.py  test_topology.py
